--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "canvas": "^3.1.0"
   }
 }
